Did a ton of stuff. (See desc.)
- Added the option to set a custom log folder in config.
- Changed configuration system so creating config as an object is no longer required.
- Updated README.

--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,5 @@
 # Enable this option to log more verbose output. Makes debugging easier. 
 debug: false
+
+# Set location of log files
+logFolder: "logs"
