More stuff(see desc. again)
- Added app.json file for app info
- Completely rewrote dependency installation system for either a graphical or terminal app(still working on graphical dependency installation)
- Added loadData function to load app data from the JSON file
- Updated README

--- a/data/app.json
+++ b/data/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "My Beginner App",
+  "name": "My App",
   "version": 0.1,
-  "author": "Me, duh",
-  "currentlogfile": "no touchy"
+  "author": "A Person",
+  "app-type": "terminal"
 }
