Added work on update systems

--- a/config.yml
+++ b/config.yml
@@ -3,3 +3,6 @@ debug: false
 
 # Set location of log files
 logFolder: "logs"
+
+# Choose if you want to participate in beta updates
+updateBranch: "stable"
